syntax = "proto3";

package AcFunDanmu;

import "ZtLiveUserInfo.proto";
import "ZtDrawGiftInfo.proto";

message CommonActionSignalGift {
	ZtLiveUserInfo user = 1;  //userInfo
	uint64 sendTimeMs = 2;
	uint64 giftId = 3;
	uint32 count = 4;  //batchSize
	uint32 combo = 5;  //comboCount
	uint64 value = 6;  //rank
	string comboId = 7;  //comboKey
	uint64 slotDisplayDurationMs = 8;
	uint64 expireDurationMs = 9;
	ZtDrawGiftInfo drawGiftInfo = 10;
}
